# riemannian-nn

./: .gitignore  .gitmodules  README.md  environment.yml  figures.py  optimization.py  pyproject.toml  requirements.txt  run.py
analysis/: run_analysis.py  run_optimization.py  run_tree_embedding.py
figures/: README.md
paper/: main.tex  references.bib
results/: README.md  RESULTS_headline.md  RESULTS_headline_matched.md  RESULTS_p2.md  RESULTS_tree_embedding.md
rnn/: __init__.py  embed.py  manifolds.py  optimization.py  train.py  train_real.py
rnn/analysis/: __init__.py  figures.py  metrics.py
rnn/data/: __init__.py  curvature.py  real.py  synthetic.py  tree_task.py
rnn/instrument/: __init__.py  bound.py  lambda_n.py
rnn/models/: __init__.py  euclidean.py  layerwise.py  qgcn.py
sweeps/: run_sweep.py
sweeps/configs/: curvature_bias.yaml  curvature_bias_strong.yaml  headline.yaml  headline_matched.yaml  p2.yaml  smoke.yaml
